# AIOUSB

./: .gitignore  .travis.yml  README.md  appveyor.yml
AIOUSB/: CMakeLists.txt  COPYING  Doxyfile  USB_8032.hex  sourceme.sh
AIOUSB/CMakeScripts/: FindGTestTap.cmake  FindMatlab.cmake  FindPHP5.cmake  FindR.cmake  Findglibc.cmake  Findlibusb-1.0.cmake  build_samples.cmake
AIOUSB/Firmware/: 10-acces_usb.alt.rules  10-acces_usb.rules  README.doc  USB-AI16-16A.hex  USB-AIO16-16A.hex  USB-DA12-8A.hex  USB_4002.hex  USB_4003.hex  USB_8001.hex  USB_8003.hex  USB_8004.hex  USB_800C.hex  USB_8010.hex  USB_8020.hex  USB_8032.hex  USB_803C.hex  USB_8070.hex  USB_8140.hex  accesloader.pl
AIOUSB/Mkfiles/: oses.inc
AIOUSB/ToolChains/: ToolChain32bitCompile.txt  ToolChain_arm_gnueabihf_gcc4.8.txt
AIOUSB/deprecated/classlib/: AI16_DataPoint.cpp  AI16_DataPoint.hpp  AI16_DataSet.cpp  AI16_DataSet.hpp  AI16_InputRange.cpp  AI16_InputRange.hpp  AO16_AnalogOutputSubsystem.cpp  AO16_AnalogOutputSubsystem.hpp  AO16_OutputRange.cpp  AO16_OutputRange.hpp  AnalogIORange.cpp  AnalogIORange.hpp  AnalogInputSubsystem.cpp  AnalogInputSubsystem.hpp  AnalogOutputSubsystem.cpp  AnalogOutputSubsystem.hpp  CMakeLists.txt  Counter.cpp  Counter.hpp  CounterSubsystem.cpp  CounterSubsystem.hpp  CppCommon.h  DA12_AnalogOutputSubsystem.cpp  DA12_AnalogOutputSubsystem.hpp  DA12_OutputRange.cpp  DA12_OutputRange.hpp  DIOStreamSubsystem.cpp  DIOStreamSubsystem.hpp  DeviceSubsystem.cpp  DeviceSubsystem.hpp  DigitalIOSubsystem.cpp  DigitalIOSubsystem.hpp  Doxyfile  Makefile  OutputVoltagePoint.hpp  Overview  README.doc  USBDeviceBase.cpp  USBDeviceBase.hpp  USBDeviceManager.cpp  (+19 more)
AIOUSB/deprecated/classlib/doc/: AI16__DataPoint_8hpp_source.html  AI16__DataSet_8hpp_source.html  AI16__InputRange_8hpp_source.html  AO16__AnalogOutputSubsystem_8hpp_source.html  AO16__OutputRange_8hpp_source.html  AnalogIORange_8hpp_source.html  AnalogInputSubsystem_8hpp_source.html  AnalogOutputSubsystem_8hpp_source.html  CounterSubsystem_8hpp_source.html  Counter_8hpp_source.html  DA12__AnalogOutputSubsystem_8hpp_source.html  DA12__OutputRange_8hpp_source.html  DIOStreamSubsystem_8hpp_source.html  DeviceSubsystem_8hpp_source.html  DigitalIOSubsystem_8hpp_source.html  OutputVoltagePoint_8hpp_source.html  USBDeviceManager_8hpp_source.html  USBDevice_8hpp_source.html  USB__AI16__Family_8hpp_source.html  USB__AO16__Family_8hpp_source.html  USB__CTR__15__Family_8hpp_source.html  USB__DA12__8A__Family_8hpp_source.html  USB__DA12__8E__Family_8hpp_source.html  USB__DIO__16__Family_8hpp_source.html  USB__DIO__32__Family_8hpp_source.html  USB__DIO__Family_8hpp_source.html  annotated.html  classAIOUSB_1_1AI16__DataPoint-members.html  classAIOUSB_1_1AI16__DataPoint.html  classAIOUSB_1_1AI16__DataPointArray-members.html  classAIOUSB_1_1AI16__DataPointArray.html  classAIOUSB_1_1AI16__DataPointArray__coll__graph.map  classAIOUSB_1_1AI16__DataPointArray__coll__graph.md5  (+281 more)
AIOUSB/deprecated/java/: Makefile  Overview.html
AIOUSB/doc/: Doxyfile  README.html  aiousb.doc  aiousb_manual.tex  classlib.doc  firmware.doc  index.doc  install.doc  java.doc  libusb.doc  mypackages.sty  samples.doc  wrappers.doc
AIOUSB/lib/: ADCConfigBlock.c  ADCConfigBlock.h  AIOBuf.c  AIOBuf.h  AIOChannelMask.c  AIOChannelMask.h  AIOChannelRange.c  AIOChannelRange.h  AIOCmd.c  AIOCmd.h  AIOCommandLine.c  AIOCommandLine.h  AIOConfiguration.c  AIOConfiguration.h  AIOContinuousBuffer.c  AIOContinuousBuffer.h  AIOCountsConverter.c  AIOCountsConverter.h  AIODeviceInfo.c  AIODeviceInfo.h  AIODeviceQuery.c  AIODeviceQuery.h  AIODeviceTable.c  AIODeviceTable.h  AIOEither.c  AIOEither.h  AIOFifo.c  AIOFifo.h  AIOList.c  AIOList.h  AIOPlugNPlay.c  AIOPlugNPlay.h  AIOProductTypes.c  AIOProductTypes.h  AIOTuple.c  AIOTuple.h  AIOTypes.h  AIOUSBDevice.c  AIOUSBDevice.h  AIOUSB_ADC.c  (+35 more)
AIOUSB/lib/doc/: AIOUSB_API_Reference.html  Body.html  Header.html  Menu.html  Reference.html
AIOUSB/lib/filepp/: Between.pm  footer.h  header.h  libaiousb.h.pre
AIOUSB/lib/mocks/: Makefile  mock_aiocontbuf_get_data.c  mock_aiocontbuf_get_data_arduino.c  mock_capture_usb.c  mock_dio.c  mock_usb_xfers.c
AIOUSB/lib/ndkbuild/: Makefile
AIOUSB/lib/tests/: aio_adc.cpp  aio_continuous_buf.cpp  aiobuf.cpp  aiousb_dac.cpp  aiousb_dio.cpp  properties.cpp  usb_test.cpp
AIOUSB/lib/wrappers/: AIOUSB.i  CMakeLists.txt  GNUMakefile  Makefile.PL  README.doc  README.md  WrapperTargets.inc  aioarrays.i  php.ini
AIOUSB/samples/: CMakeLists.txt
AIOUSB/samples/TestLib/: CMakeLists.txt  TestCaseSetup.cpp  TestCaseSetup.h  aiocommon.c  aiocommon.h
AIOUSB/samples/USB-AI16-16/: BUILD_INSTRUCTIONS.txt  Makefile  README.doc  Sample.java  Sample2.java  bulk_acquire_sample.c  burst_test.c  continuous_mode.c  continuous_mode_callback.c  continuous_mode_from_json_config.c  dio_sample.c  histogram.r  log.c  read_channels_test.c  read_channels_test_scala.scala  read_channels_with_getchannelv_test.cpp  reverse_cal_table.cpp  run_continuous_mode.sh  runtests.sh  sample.cpp  simp_test.cpp  simple_continuous_with_json.c  start_stop_continuous.c  test_fastscan.cpp
AIOUSB/samples/USB-AO16-16/: README.doc  lib  sample.cpp
AIOUSB/samples/USB-ARB1/: stream_test.c
AIOUSB/samples/USB-CTR-15/: ctr15.c  ctr15.py  how_to_run.sh
AIOUSB/samples/USB-DA12-8A/: README.doc  Sample.java  SampleClass.cpp  sample.cpp
AIOUSB/samples/USB-DIO-16/: BUILD_INSTRUCTIONS.txt  Makefile  README.doc  Sample.java  receiver.cpp  sample.cpp  standalone_receiver.c  standalone_receiver.py  transmitter.cpp
AIOUSB/samples/USB-DIO-32/: README.doc  Sample.java  lib  read_and_write_sample.c  sample.py  sample3.c
AIOUSB/samples/USB-DIO-96/: dio96.py  dio96_read_write.c  read_and_write_sample.c  write_sample.c
AIOUSB/samples/USB-DIO24-CTR6/: configure_outputs.c
AIOUSB/samples/USB-IDIO-16_8/: README.doc  Sample.java  idio_sample.c  idio_sample2.c  lib  matlab_usb_idio_speed_test.m  matlab_usb_idio_test.m  octave_usb_idio_speed_test.m  octave_usb_idio_test.m  perftest.c  usbidio16_8.py
AIOUSB/samples/USB-IIRO-16_8/: iiro_sample.c  usbiiro16_8.py
(+197 files in other folders)
