#=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
# CMAKE file for building and installing R wrappers 
#=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-

MESSAGE(STATUS "Rules for building R wrapper")
FIND_PACKAGE( SWIG REQUIRED )
FIND_PACKAGE( R REQUIRED )
INCLUDE(${SWIG_USE_FILE})


OPTION( GUESS_R_INSTALL "Guess at the location of installing R modules" OFF)

IF( GUESS_R_INSTALL ) 
  SET( USE_R_GUESS_INSTALL TRUE )
ELSE( GUESS_R_INSTALL ) 
  IF( GUESS_WRAPPER_INSTALL_DIRECTORIES ) 
    SET( USE_R_GUESS_INSTALL TRUE )
  ELSE( GUESS_WRAPPER_INSTALL_DIRECTORIES ) 
    SET( USE_R_GUESS_INSTALL FALSE )
  ENDIF( GUESS_WRAPPER_INSTALL_DIRECTORIES ) 
ENDIF( GUESS_R_INSTALL )


SET(DEFAULT_R_DIR_GUESS "R" )

MESSAGE(STATUS "USE_R.. ${USE_R_GUESS_INSTALL}")
#
# Installation directory
#
IF( USE_R_GUESS_INSTALL ) 
  IF( INSTALL_WRAPPERS_RELATIVE ) 
    SET(R_MODULE_INSTALL_DIRECTORY ${DEFAULT_R_DIR_GUESS} CACHE PATH "R Module installation directory"  )
  ELSE( INSTALL_WRAPPERS_RELATIVE ) #GLOBAL Installation
    SET(R_MODULE_INSTALL_DIRECTORY "${R_HOME}/library/aiousb/libs"  CACHE PATH "R Module installation directory"  )
  ENDIF( INSTALL_WRAPPERS_RELATIVE )
  # MESSAGE(STATUS "THERE")
ELSE( USE_R_GUESS_INSTALL ) 
  # MESSAGE(STATUS "HERE")
  SET(R_MODULE_INSTALL_DIRECTORY NOTFOUND CACHE PATH "R Module installation directory"  )
ENDIF( USE_R_GUESS_INSTALL )

MESSAGE(STATUS "R Install Directory. ${R_MODULE_INSTALL_DIRECTORY}")

INCLUDE_DIRECTORIES( ${R_INCLUDE_DIR} )
SWIG_ADD_MODULE( AIOUSB_R R AIOUSB.i )
SWIG_LINK_LIBRARIES( AIOUSB_R aiousb )

ADD_CUSTOM_COMMAND( 
  OUTPUT AIOUSB${CMAKE_SHARED_LIBRARY_SUFFIX}
  COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_SHARED_MODULE_PREFIX}AIOUSB_R${CMAKE_SHARED_LIBRARY_SUFFIX} AIOUSB${CMAKE_SHARED_LIBRARY_SUFFIX} 
  DEPENDS AIOUSB_R
  COMMENT "Renaming R Library file"
  )

ADD_CUSTOM_TARGET( R_wrap ALL DEPENDS AIOUSB${CMAKE_SHARED_LIBRARY_SUFFIX} )

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/AIOUSB${CMAKE_SHARED_LIBRARY_SUFFIX} DESTINATION  ${R_MODULE_INSTALL_DIRECTORY} )
