#=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
# CMAKE file for building Php wrappers 
#=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-


MESSAGE(STATUS "Building Php wrapper")
FIND_PACKAGE( SWIG REQUIRED )
FIND_PACKAGE( PHP5 REQUIRED )
INCLUDE(${SWIG_USE_FILE})


INCLUDE_DIRECTORIES( ${PHP5_INCLUDE_PATH} )
SWIG_ADD_MODULE( AIOUSBphp php5 AIOUSB.i )
SWIG_LINK_LIBRARIES( AIOUSBphp aiousb )

ADD_CUSTOM_COMMAND( 
  OUTPUT ${CMAKE_SHARED_MODULE_PREFIX}AIOUSB${CMAKE_SHARED_LIBRARY_SUFFIX}
  COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_SHARED_MODULE_PREFIX}AIOUSBphp${CMAKE_SHARED_LIBRARY_SUFFIX} ${CMAKE_SHARED_MODULE_PREFIX}AIOUSB${CMAKE_SHARED_LIBRARY_SUFFIX} 
  DEPENDS AIOUSBphp
  COMMENT "Renaming PHP Library file"
  )

#
# Determine the installation directory
#

execute_process(COMMAND ${PHP5_EXECUTABLE} -i
  OUTPUT_VARIABLE PHP_INFO
  RESULT_VARIABLE _res 
  OUTPUT_STRIP_TRAILING_WHITESPACE
)

string(REGEX REPLACE "^.*extension_dir +=> +([A-z/0-9+]+).*$"
  "\\1" PHP_INSTALLATION_DIRECTORY
  ${PHP_INFO}
  )


IF( NOT PHP_INSTALL_DIRECTORY ) 
  SET( PHP_INSTALL_DIRECTORY ${PHP_INSTALLATION_DIRECTORY} )
ENDIF( NOT PHP_INSTALL_DIRECTORY ) 

MESSAGE(STATUS "PHP installation directory is ${PHP_INSTALLATION_DIRECTORY}")

ADD_CUSTOM_TARGET( php_wrap ALL DEPENDS ${CMAKE_SHARED_MODULE_PREFIX}AIOUSB${CMAKE_SHARED_LIBRARY_SUFFIX} )
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_SHARED_MODULE_PREFIX}AIOUSB${CMAKE_SHARED_LIBRARY_SUFFIX} DESTINATION ${PHP_INSTALL_DIRECTORY} )


